# quant-trading

./: .gitignore  main.py  pyproject.toml
app/backtest/: engine.py  performance.py  plot.py  position.py  report.py  trade.py
app/config/: settings.py  watchlist.py
app/constants/: columns.py
app/converters/: dataframe_converter.py
app/data/: downloader.py  ibkr_provider.py  mapper.py  provider.py  provider_factory.py  yahoo_provider.py
app/database/: db.py  init_db.py  models.py  orm_mapper.py  repository.py
app/domain/: market_bar.py  order.py  position.py  signal.py  timeframe.py  trade.py  trading_signal.py
app/indicators/: base_indicator.py  indicator_engine.py  ma_indicator.py
app/services/: market_data_service.py
app/strategy/: base_strategy.py  ma_cross_strategy.py
tests/: test_backtest.py
