[project]
name = "quant-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "panadas>=0.2",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "yfinance>=1.5.1",
]
